---
source: compiler/lume_hir/src/lower.rs
description: "for pattern in [1, 2, 3] { }"
---
[
    Statement {
        id: 0,
        kind: IteratorLoop(
            IteratorLoop {
                id: 0,
                collection: Expression {
                    id: 5871781006564002453,
                    location: <internal>:15:16,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: std::Array::with_capacity,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:0:0,
                                    kind: Literal(
                                        Literal {
                                            id: 17615343019692007359,
                                            location: <internal>:0:0,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 5040379952546458196,
                                                    value: 3,
                                                    kind: U64,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                block: Block {
                    statements: [],
                    location: <internal>:25:28,
                },
                location: <internal>:0:28,
            },
        ),
        location: <internal>:0:28,
    },
]
